experimental/parser/testdata/parser/range/extension_names.proto.stderr.txt
error: unexpected string literal in extension range
  --> testdata/parser/range/extension_names.proto:6:21
   |
 6 |     extensions foo, "bar";
   |                     ^^^^^ expected range expression or integer literal

encountered 1 error
